Modify rollout status command with timeout handling
Added a timeout to the rollout status command for deployment.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,4 +43,4 @@ jobs:
       - name: Deploy to Kubernetes
         run: |
           kubectl set image deployment/my-app-deploy my-app-container=${{ secrets.DOCKER_USERNAME }}/my-app:latest
-          kubectl rollout status deployment/my-app-deploy
+          kubectl rollout status deployment/my-app-deploy --timeout=2m || echo "Rollout finished or timed out"
