--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,5 +47,16 @@ jobs:
       # 7️⃣ Deploy to Kubernetes safely
       - name: Deploy to Kubernetes
         run: |
+          # Update the deployment image; ignore exit code if image is unchanged
           kubectl set image deployment/my-app-deploy my-app-container=${{ secrets.DOCKER_USERNAME }}/my-app:latest || true
+
+          # Wait for rollout, ignore timeout/failure
           kubectl rollout status deployment/my-app-deploy --timeout=2m || echo "Rollout finished or timed out"
+
+      # 8️⃣ Optional debug (if workflow still fails)
+      - name: Debug Deployment (Optional)
+        if: failure()
+        run: |
+          set -x
+          kubectl get deployments
+          kubectl get pods -o wide
